<resources>
    <string name="app_name">DealWithIt</string>

    <!-- Navigation Drawer -->
    <string name="organizer">To Deal With</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <!-- Navigation Drawer Buttons -->
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>

    <!-- Navigation Drawer Events -->
    <string name="todo_type">ToDo</string>
    <string name="work_type">Work Tasks</string>
    <string name="birthday_type">Birthdays</string>
    <string name="drawer_menu_submenu_title">Events</string>

    <!-- Toolbar menu -->
    <string name="menu_interests">Interests</string>

    <!-- Tabs -->
    <string name="tab_today_name">Today</string>
    <string name="tab_schedule_name">Schedule</string>
    <string name="tab_planing_name">Management</string>

    <!-- New Task page(fragment) -->
    <string name="activity_new_task_name">New Task</string>
    <string name="task_type_hint">Task type</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_date_hint">Date</string>
    <string name="task_start_time_hint">Start time</string>
    <string name="task_end_time_hint">End time</string>
    <string name="task_comment_hint">Comment</string>
    <string name="add_comment_task_hint">Add comment</string>
    <string name="task_sub_tasks_hint">Sub tasks</string>
    <string name="task_importance_hint">Importance</string>
    <string name="task_interests_hint">Interests</string>
    <string name="add_sub_task_hint">Add task</string>
    <string name="add_importance_type_hint">Not important</string>
    <string name="add_interests_count_hint">No interests added</string>
    <string name="menu_save">save</string>

    <string name="additional_task_info_switch_text">Additional task info</string>
    <string name="important_text">Important</string>
    <string name="not_important_text">Not important</string>

    <string name="error_hint">You must input something!</string>

    <!-- New Schedule page(fragment) -->
    <string name="task_day_hint">Day</string>
    <string name="add_task_hint">Add task</string>

    <!-- Type pick dialog -->
    <string name="pick_type_dialog_title">Chose type of task</string>

    <string name="dialog_ok"><b>OK</b></string>
    <string name="dialog_cancel"><b>cancel</b></string>

    <string name="todo_type_button">ToDo</string>
    <string name="work_task_type_button">Work Task</string>
    <string name="birthday_type_button">Birthday</string>
    <string name="schedule_type_rbutton">Schedule</string>

    <string name="no_type_selected">No type selected</string>

    <!-- Schedule Type pick dialog -->
    <string name="pick_schedule_type_dialog_title">Chose type of schedule task</string>

    <string name="lesson_type_button">Lesson</string>
    <string name="exam_type_button">Exam</string>
    <string name="lab_work_type_button">Laboratory Work</string>

    <!-- Type validation -->
    <string name="type_error">There is no type like that!</string>
    <string name="empty_error">Can not be empty!</string>

    <!-- Time validation -->
    <string name="format_time_12h">(1[012]|[1-9]):[0-5][0-9](\\\\s)?(?i)(am|pm)</string>
    <string name="format_time_24h">([01]?[0-9]|2[0-3]):[0-5][0-9]</string>

    <string name="time_input_error_12">Wrong input! Your time should be in HH:MM AM|PM format</string>
    <string name="time_input_error_24">Wrong input! Your time should be in HH:MM format</string>

    <!-- Date validation -->
    <string name="format_date">(0?[1-9]|[12][0-9]|3[01])/(0?[1-9]|1[012])/((19|20)\\d\\d)</string>
    <string name="date_input_error">Wrong input! Your date should be in DD/MM/YYYY format</string>
    <string name="schedule_task_pick_time">Pick time</string>


    <!-- Interests page -->
    <string name="activity_interests_name">Interests</string>

    <string name="menu_info">Info</string>
    <string name="menu_show_all">All</string>
    <string name="menu_important">Important</string>
    <string name="menu_not_important">Not Important</string>
    <string name="menu_az">A-z</string>
    <string name="menu_za">Z-a</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="interest_input_hint">Interest title</string>

    <string name="input_dialog_title">New interest</string>
    <string name="edit_dialog_title">Edit interest</string>
    <string name="delete_dialog_title">Delete interest</string>

    <!-- Task List page -->
    <string name="activity_task_list_name">Task List</string>

</resources>
