<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/schedule_task_type"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/no_type_selected"
        android:gravity="center_vertical"
        android:textSize="34sp"
        style="@style/TextRobotoRegular"
        android:onClick="onPickType"
        android:textColor="@color/colorTitleText"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/schedule_task_type_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        style="@style/StyledTilEditTextLayout"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/schedule_task_type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_type_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="24sp"
            android:maxLength="38"
            style="@style/StyledTilEditText"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:text="Day"
        android:textSize="14sp"
        android:textColor="@color/colorText87"
        style="@style/TextRobotoRegular"/>

    <include layout="@layout/day_pick_layout" />

    <!--TODO: make one reusable layout, it's used 3 times! -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/button_add_task"
        android:onClick="onAddTaskItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextRobotoRegular"
            android:textSize="16sp"
            android:text="@string/add_task_hint"
            android:textColor="@color/colorTitleText"/>

        <ImageView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_task" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>